# Financial-Helper

./: .env.example  .gitignore  README.md  check_schema.py  claude.md  pyproject.toml  railway.json  requirements.txt  reset_db.py  seed.py  supabase_schema.sql  test_connection.py
app/: main.py
app/core/: auth.py  config.py
app/db/: __init__.py  session.py
app/graphql/: schema.py  types.py
app/models/: __init__.py  category.py  transaction.py  user.py
app/routes/: analytics.py  auth.py  categories.py  transactions.py  users.py
app/schemas/: __init__.py  category.py  enums.py  token.py  transaction.py  user.py
app/services/: analytics_service.py  category_service.py  transaction_service.py
frontend/: .gitignore  README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChartsSection.jsx  SummaryCards.jsx  TransactionForm.jsx  TransactionTable.jsx
frontend/src/contexts/: CurrencyContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Transactions.jsx
frontend/src/services/: api.js
frontend/src/utils/: token.js
